--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "node_modules/.bin/vue-cli-service serve resources/main.js",
+    "start": "node_modules/.bin/vue-cli-service serve resources/main.js",
     "build": "node_modules/.bin/vue-cli-service build resources/main.js",
     "test:unit": "jest",
     "lint": "node_modules/.bin/vue-cli-service lint resources"
@@ -13,7 +13,8 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "chokidar": "^3.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -21,9 +22,11 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
+    "chokidar": "^3.5.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "typescript": "^4.5.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
