--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "node_modules/.bin/vue-cli-service lint resources"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.8",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -26,6 +30,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-cli": "^9.1.0",
+    "postcss-loader": "^6.2.1",
     "typescript": "^4.5.3",
     "vue-template-compiler": "^2.6.11"
   }
