--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "autoprefixer": "^9.8.8",
     "core-js": "^3.6.5",
     "postcss": "^7.0.39",
+    "reflect-metadata": "^0.1.13",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.3",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-class-modules": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.5",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -39,6 +42,8 @@
     "postcss-loader": "^6.2.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^2.0.0"
   }
 }
