--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
+    "vue-i18n": "^8.26.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.3",
     "vuex": "^3.6.2",
