:feat #properties view complete and proyect works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
             "webpack"
         ],
         "noImplicitAny": false,
-        "allowUnusedLabels": true,
+        "allowUnusedLabels": true
     },
     "lib": [
         "esnext",
